Swagger generate fix (#17)
* Reformat


* Avoid overring on swagger generate


* Fixed Redoc UI failing


* Fixed swagger-ui with redoc and added new swagger-ui


* Added new swagger-ui and fixed redoc


* Removed nxos file type per Massarrah Tannous <massarrah.tannous@emc.com>


* Pointing binary builds to new directory


* Added copyright to sh files


* Added Copyrights


* Added rest of copyrights
